tests/types/errors/count_invalid_type.mochi
let x = 1
print(count(x))
